[package]
name = "book-tracker"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
directories = "2.0.2"
uuid = { version = "0.8.1", features = ["v4"] }
clap = {version = "~2.27.0", features = ["yaml"]}
